--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version: "2"
 services:
   metabase:
-    platform: linux/x86_64
-    image: metabase/metabase:v0.41.1
+    image: metabase/metabase:v0.42.3
     env_file: ./env
     volumes:
       - ./metabase-data:/metabase-data
@@ -12,8 +11,7 @@ services:
       - postgres-mb
 
   postgres-mb:
-    platform: linux/x86_64
-    image: postgres:9.5-alpine
+    image: postgres:13.6-bullseye
     env_file: ./env
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
