--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - postgres-mb
 
   postgres-mb:
-    image: postgres:13.6-bullseye
+    image: postgres:latest
     env_file: ./env
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
