modified:   Docker.ipynb 	modified:   docker-compose.yml 	new file:   images/postgres_setting.png 	new file:   posgreinit/init.sql 	modified:   sql/analysis.sql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,7 @@ services:
     env_file: ./env
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
+      - ./posgreinit:/docker-entrypoint-initdb.d
     ports:
       - 5432:5432
+    container_name: "db"
