--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: metabase/metabase:v0.42.3
     env_file: ./env
     volumes:
-      - ./metabase-data:/metabase-data
+      - ./data/metabase-data:/metabase-data
     ports:
       - 3000:3000
     depends_on:
@@ -14,7 +14,7 @@ services:
     image: postgres:latest
     env_file: ./env
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - ./data/postgres-data:/var/lib/postgresql/data
       - ./posgreinit:/docker-entrypoint-initdb.d
     ports:
       - 5432:5432
