--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - postgres-mb
 
   postgres-mb:
-    image: postgres:latest
+    image: postgres:alpine3.16
     env_file: ./env
     volumes:
       - ./data/postgres-data:/var/lib/postgresql/data
