modified:   docker-compose.yml 	modified:   env 	renamed:    sql/select.sql -> sql/section4_select.sql 	renamed:    sql/analysis.sql -> sql/section5_analysis.sql 	renamed:    sql/science.sql -> sql/section6_science.sql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,6 @@ services:
       - ./data/postgres-data:/var/lib/postgresql/data
       - ./posgreinit:/docker-entrypoint-initdb.d
     ports:
-      - 5432:5432
+      - 5434:5434
+    command: -p 5434
     container_name: "db"
