--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,15 +11,14 @@ services:
       - postgres-mb
 
   postgres-mb:
-    image: postgres:alpine3.16
+    build:
+      context: ps_build
+      dockerfile: Dockerfile
     env_file: ./env
     volumes:
-      - .postgres-data:/var/lib/postgresql/data
+      - ./data/postgres-data:/var/lib/postgresql/data
       - ./posgreinit:/docker-entrypoint-initdb.d
     ports:
       - 5434:5434
     command: -p 5434
     container_name: "db"
-volumes:
-  postgres-data:
-    external: true
