modified:   docker-compose.yml 	modified:   ps_build/Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       dockerfile: Dockerfile
     env_file: ./env
     volumes:
+      # 永続化したい場合は以下のコメントアウトを外してください
+      # - ./data/postgres-data:/var/lib/postgresql/data
       - ./posgreinit:/docker-entrypoint-initdb.d
     ports:
       - 5434:5434
