--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   metabase:
-    image: metabase/metabase:v0.42.3
+    build: .
     env_file: ./env
     volumes:
       - ./data/metabase-data:/metabase-data
